# python-rpg-api

./: .gitignore  manage.py  pyproject.toml  schema.yml
rpg/: admin.py  models.py  serializers.py  urls.py  views.py
rpg/migrations/: 0001_initial.py  0002_alter_character_exp.py
rpgproj/: asgi.py  settings.py  urls.py  wsgi.py
